--- a/try_jupyter/try.ipynb
+++ b/try_jupyter/try.ipynb
@@ -2,24 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "ad57d331",
+   "execution_count": 17,
+   "id": "5dc88824",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "110\n",
-      "None\n"
+      "{4: ['a', 6, 'b', 8]}\n",
+      "{4: ['a', 6, 'b', 8, 'a', 10, 'b', 12]}\n"
      ]
     }
    ],
    "source": [
-    "def __func(num):\n",
-    "    print(num*(num+1))\n",
-    "print(__func(10))"
+    "class aa:\n",
+    "    def __init__(self):\n",
+    "        self.dic = {}\n",
+    "        \n",
+    "    def check_in(self,id,stationName,time):\n",
+    "        if id not in self.dic.keys():\n",
+    "            self.dic[id] = []\n",
+    "        self.dic[id].append(stationName)\n",
+    "        self.dic[id].append(time)\n",
+    "        \n",
+    "    def check_out(self,id,stationName,time):\n",
+    "        self.dic[id].append(stationName)\n",
+    "        self.dic[id].append(time)\n",
+    "        print(self.dic)\n",
+    "\n",
+    "    def get_average_time(self,stationName,stationName2):\n",
+    "        \n",
+    "        sum = 0\n",
+    "        num = 0\n",
+    "        \n",
+    "        for key in self.dic:\n",
+    "            print(key)\n",
+    "            print(self.dic[key])\n",
+    "            \n",
+    "            for i in range(0,len(self.dic[key]),4):\n",
+    "                if(self.dic[key][i]==stationName and self.dic[key][i+2] ==stationName2):\n",
+    "                    sum += self.dic[key][i+3] -self.dic[key][i+1]\n",
+    "                    num += 1\n",
+    "                    \n",
+    "        return sum/num\n",
+    "        \n",
+    "aaa = aa()\n",
+    "aaa.check_in(4,\"a\",6)\n",
+    "aaa.check_out(4,\"b\",8)\n",
+    "\n",
+    "aaa.check_in(5,\"a\",10)\n",
+    "aaa.check_out(5,\"b\",12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "05f39eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,4):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd6d94c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
